# MiniCDS

./: .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: index.rst
docs/minicds/: index.rst
licenses/: LICENSE.rst
minicds/: __init__.py  __main__.py  cdsserver.py  config.py  minicds.cfg  setup_package.py
minicds/config/: main.cfg
minicds/data/: helptext.txt
